feat: testing endpoints
